--- a/app/index.html
+++ b/app/index.html
@@ -12,13 +12,11 @@
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css" />
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/books.css" />
 
-    <link rel="stylesheet" href="{{rootURL}}bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="{{rootURL}}css/bootstrap-select.min.css" />
+    <!-- <link rel="stylesheet" href="{{rootURL}}bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="{{rootURL}}css/bootstrap-select.min.css" /> -->
     <link rel="stylesheet" href="{{rootURL}}css/tagsinput.css" />
     <link rel="stylesheet" href="{{rootURL}}css/bootstrap-datepicker.css" />
     <link rel="stylesheet" href="{{rootURL}}css/styles.css" />
-
-    <script src="{{rootURL}}bootstrap/js/jquery-3.5.1.slim.min.js"></script>
 
     {{content-for "head-footer"}}
   </head>
@@ -34,8 +32,8 @@
     <script src="{{rootURL}}js/bootstrap-file.js"></script>
     <script src="{{rootURL}}js/bootstrap-datepicker.min.js"></script>
     <script src="{{rootURL}}js/bootstrap-datepicker.ru.min.js"></script>
-    <script src="{{rootURL}}js/bootstrap-select.min.js"></script>
-    <script type="text/javascript">
+    <!-- <script src="{{rootURL}}js/bootstrap-select.min.js"></script> -->
+    <!-- <script type="text/javascript">
       $(function () {
         $(".datepicker").datepicker({
           clearBtn: true,
@@ -44,7 +42,7 @@
           autoclose: true,
         });
       });
-    </script>
+    </script> -->
     {{content-for "body-footer"}}
   </body>
 </html>
