--- a/app/index.html
+++ b/app/index.html
@@ -12,11 +12,8 @@
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css" />
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/books.css" />
 
-    <!-- <link rel="stylesheet" href="{{rootURL}}bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="{{rootURL}}css/bootstrap-select.min.css" /> -->
     <link rel="stylesheet" href="{{rootURL}}css/tagsinput.css" />
     <link rel="stylesheet" href="{{rootURL}}css/bootstrap-datepicker.css" />
-    <link rel="stylesheet" href="{{rootURL}}css/styles.css" />
 
     {{content-for "head-footer"}}
   </head>
@@ -26,14 +23,18 @@
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/books.js"></script>
 
-    <script src="{{rootURL}}js/popper.min.js"></script>
     <script src="{{rootURL}}bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- <script src="{{rootURL}}js/popper.min.js"></script> -->
     <script src="{{rootURL}}js/tagsinput.js"></script>
     <script src="{{rootURL}}js/bootstrap-file.js"></script>
     <script src="{{rootURL}}js/bootstrap-datepicker.min.js"></script>
     <script src="{{rootURL}}js/bootstrap-datepicker.ru.min.js"></script>
+    <script src="{{rootURL}}js/vendor/jquery.ui.widget.js"></script>
+    <script src="{{rootURL}}js/jquery.fileupload.js"></script>
     <!-- <script src="{{rootURL}}js/bootstrap-select.min.js"></script> -->
-    <!-- <script type="text/javascript">
+
+    <script type="text/javascript">
       $(function () {
         $(".datepicker").datepicker({
           clearBtn: true,
@@ -42,7 +43,7 @@
           autoclose: true,
         });
       });
-    </script> -->
+    </script>
     {{content-for "body-footer"}}
   </body>
 </html>
